@@ -11,3 +11,6 @@
    {% block methods %}
    .. automethod:: __init__
    {% endblock %}
+
+.. minigallery:: {{module}}.{{objname}}
+   :add-heading: Examples using the class
