@@ -7,3 +7,6 @@
 .. currentmodule:: {{ module }}
 
 .. autofunction:: {{ objname }}
+
+.. minigallery:: {{module}}.{{objname}}
+   :add-heading: Examples using the function
